variables scss and fix the kill flicker placeholder class

--- a/scss/foundation/components/_offcanvas.scss
+++ b/scss/foundation/components/_offcanvas.scss
@@ -65,7 +65,7 @@ $menu-slide: "transform 500ms ease" !default;
 // EXTEND CLASSES
 // Remove transition flicker on phones
 %kill-flicker {
-  -webkit-transform: translateZ(0x);
+  -webkit-transform: translateZ(0);
   -webkit-backface-visibility: hidden;
 }
 
